# visitor_pattern_sample

./: CMakeLists.txt  README.md  main.cpp  shape_output.txt
improved-version/: AreaVisitor.cpp  AreaVisitor.h  BaseShape.h  Circle.cpp  Circle.h  CompoundShape.cpp  CompoundShape.h  FileOutputVisitor.cpp  FileOutputVisitor.h  Rectangle.cpp  Rectangle.h  ShapeVisitor.h  Triangle.cpp  Triangle.h  XMLExportVisitor.cpp  XMLExportVisitor.h
